fix(home): Wrong height

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,4 +18,5 @@ h6{
 
 h1 {
   font-size: 3rem;
+  margin: 0;
 }
